--- a/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/Base.lproj/Main.storyboard
@@ -86,6 +86,9 @@
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="sVj-yV-9Uo"/>
                                         </constraints>
                                         <state key="normal" title="Button 1"/>
+                                        <connections>
+                                            <segue destination="2BF-dV-jrg" kind="show" id="kU8-Yb-8o1"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qc8-t0-eAG">
                                         <rect key="frame" x="160" y="0.0" width="150" height="40"/>
@@ -175,6 +178,172 @@
             </objects>
             <point key="canvasLocation" x="1749.0147783251232" y="93.599999999999994"/>
         </scene>
+        <!--AutoLayout-->
+        <scene sceneID="4xn-NE-ges">
+            <objects>
+                <viewController id="2BF-dV-jrg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mvo-cV-yx3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pOX-7d-gOn" userLabel="TopWhiteView">
+                                <rect key="frame" x="0.0" y="88" width="375" height="239"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2LC-Lg-uKc">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="239"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animal1" translatesAutoresizingMaskIntoConstraints="NO" id="Dnp-Fy-giz">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="X8Q-eU-Yg5">
+                                                <rect key="frame" x="0.0" y="122" width="375" height="117"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Investor" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CwS-BL-I3B">
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="21.666666666666668"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rajesh Evv" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLf-9H-n3e">
+                                                        <rect key="frame" x="0.0" y="31.666666666666657" width="375" height="22"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$237- $450" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qef-kp-HEr">
+                                                        <rect key="frame" x="0.0" y="63.666666666666679" width="375" height="21.666666666666664"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hyderabad, India" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9n-XA-m5I">
+                                                        <rect key="frame" x="0.0" y="95.333333333333314" width="375" height="21.666666666666671"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.38073678129999999" blue="0.35957536480000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="6565" id="0iX-fa-c8c">
+                                                <variation key="heightClass=compact-widthClass=compact" constant="200"/>
+                                            </constraint>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="0iX-fa-c8c"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=compact-widthClass=compact">
+                                            <mask key="constraints">
+                                                <exclude reference="0iX-fa-c8c"/>
+                                            </mask>
+                                        </variation>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="2LC-Lg-uKc" firstAttribute="top" secondItem="pOX-7d-gOn" secondAttribute="top" id="4du-8I-sWr"/>
+                                    <constraint firstAttribute="trailing" secondItem="2LC-Lg-uKc" secondAttribute="trailing" id="67A-mi-Idn"/>
+                                    <constraint firstItem="2LC-Lg-uKc" firstAttribute="height" secondItem="pOX-7d-gOn" secondAttribute="height" id="8o6-q3-1CE"/>
+                                    <constraint firstAttribute="width" constant="600" id="DZy-dz-93I">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="300"/>
+                                    </constraint>
+                                    <constraint firstItem="2LC-Lg-uKc" firstAttribute="leading" secondItem="pOX-7d-gOn" secondAttribute="leading" id="dEf-7W-wsZ"/>
+                                    <constraint firstAttribute="height" constant="239" id="iJm-Lf-AXL"/>
+                                    <constraint firstItem="2LC-Lg-uKc" firstAttribute="height" secondItem="pOX-7d-gOn" secondAttribute="height" id="iVD-qD-VqE"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="DZy-dz-93I"/>
+                                        <exclude reference="iJm-Lf-AXL"/>
+                                        <exclude reference="8o6-q3-1CE"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="DZy-dz-93I"/>
+                                        <exclude reference="iJm-Lf-AXL"/>
+                                        <include reference="8o6-q3-1CE"/>
+                                        <exclude reference="iVD-qD-VqE"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fR9-zT-ESc">
+                                <rect key="frame" x="0.0" y="327" width="375" height="451"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8eL-yJ-ncp">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="451"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="8eL-yJ-ncp" firstAttribute="leading" secondItem="fR9-zT-ESc" secondAttribute="leading" id="1DH-bW-3Au"/>
+                                    <constraint firstItem="8eL-yJ-ncp" firstAttribute="top" secondItem="fR9-zT-ESc" secondAttribute="top" id="A0p-4g-b0B"/>
+                                    <constraint firstAttribute="bottom" secondItem="8eL-yJ-ncp" secondAttribute="bottom" id="jIe-Ea-t2g"/>
+                                    <constraint firstAttribute="trailing" secondItem="8eL-yJ-ncp" secondAttribute="trailing" id="zUa-O6-1dp"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ZAl-YX-XWS"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="leading" secondItem="pOX-7d-gOn" secondAttribute="trailing" constant="29" id="4X4-Gp-W58">
+                                <variation key="heightClass=compact-widthClass=compact" constant="0.0"/>
+                            </constraint>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="top" secondItem="ZAl-YX-XWS" secondAttribute="top" constant="20" id="8at-kN-nmM"/>
+                            <constraint firstItem="ZAl-YX-XWS" firstAttribute="bottom" secondItem="pOX-7d-gOn" secondAttribute="bottom" constant="451" id="APF-5P-cCF"/>
+                            <constraint firstItem="pOX-7d-gOn" firstAttribute="leading" secondItem="Mvo-cV-yx3" secondAttribute="leading" id="Aiy-v9-2tJ">
+                                <variation key="heightClass=compact-widthClass=compact" constant="40"/>
+                            </constraint>
+                            <constraint firstItem="pOX-7d-gOn" firstAttribute="top" secondItem="ZAl-YX-XWS" secondAttribute="top" id="OUJ-qN-Pfz">
+                                <variation key="heightClass=compact-widthClass=compact" constant="20"/>
+                            </constraint>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="top" secondItem="pOX-7d-gOn" secondAttribute="bottom" id="PJu-bG-b9S"/>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="leading" secondItem="ZAl-YX-XWS" secondAttribute="leading" id="Tb5-pf-Aah"/>
+                            <constraint firstItem="ZAl-YX-XWS" firstAttribute="trailing" secondItem="fR9-zT-ESc" secondAttribute="trailing" id="VNW-kn-LPW"/>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="height" secondItem="pOX-7d-gOn" secondAttribute="height" id="d86-LH-v2r"/>
+                            <constraint firstAttribute="trailing" secondItem="pOX-7d-gOn" secondAttribute="trailing" id="lnJ-Rf-TdA">
+                                <variation key="heightClass=compact-widthClass=compact" constant="20"/>
+                            </constraint>
+                            <constraint firstItem="ZAl-YX-XWS" firstAttribute="bottom" secondItem="fR9-zT-ESc" secondAttribute="bottom" id="wD4-NM-kc3"/>
+                            <constraint firstItem="fR9-zT-ESc" firstAttribute="top" secondItem="pOX-7d-gOn" secondAttribute="top" id="wlD-VA-3KP"/>
+                            <constraint firstItem="ZAl-YX-XWS" firstAttribute="trailing" secondItem="fR9-zT-ESc" secondAttribute="trailing" constant="6" id="yM7-us-NPs"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="yM7-us-NPs"/>
+                                <exclude reference="4X4-Gp-W58"/>
+                                <exclude reference="8at-kN-nmM"/>
+                                <exclude reference="d86-LH-v2r"/>
+                                <exclude reference="wlD-VA-3KP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="APF-5P-cCF"/>
+                                <exclude reference="VNW-kn-LPW"/>
+                                <include reference="yM7-us-NPs"/>
+                                <exclude reference="lnJ-Rf-TdA"/>
+                                <include reference="4X4-Gp-W58"/>
+                                <include reference="8at-kN-nmM"/>
+                                <exclude reference="PJu-bG-b9S"/>
+                                <exclude reference="Tb5-pf-Aah"/>
+                                <include reference="d86-LH-v2r"/>
+                                <exclude reference="wlD-VA-3KP"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="AutoLayout" id="bwX-KC-uVm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1bt-GS-800" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2725.1231527093596" y="71.200000000000003"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="d6p-cX-Fvu">
             <objects>
@@ -208,6 +377,12 @@
         </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
